[ Feature | Header Composition ] Fix the vertical alignment for left header composition.

--- a/style.css
+++ b/style.css
@@ -508,6 +508,11 @@ textarea {
 	width:50%;
 }
 
+.nav-align-v-center {
+	display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
 /*--------------------------------------------------------------
 ## Links
 --------------------------------------------------------------*/
